--- a/src/main/resources/Acceuil.fxml
+++ b/src/main/resources/Acceuil.fxml
@@ -16,11 +16,12 @@
 
     <children>
         <!-- 🌟 Barre latérale -->
+        <!-- 🌟 Barre latérale -->
         <VBox layoutX="0.0" layoutY="0.0" prefHeight="671.0" prefWidth="200.0"
               style="-fx-background-color: linear-gradient(to bottom, #4b0082, #8a2be2);
-                     -fx-padding: 20px;
-                     -fx-border-radius: 10px;
-                     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 15, 0, 3, 3);">
+             -fx-padding: 20px;
+             -fx-border-radius: 10px;
+             -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 15, 0, 3, 3);">
             <children>
                 <ImageView fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -30,9 +31,15 @@
 
                 <Label text="Menu"
                        style="-fx-font-size: 18px; -fx-text-fill: white; -fx-font-weight: bold;
-                              -fx-padding: 15px; -fx-alignment: center;"/>
+                      -fx-padding: 15px; -fx-alignment: center;"/>
+
+                <!-- Bouton Déconnexion -->
+                <Button fx:id="logoutButton" text="🔓 Déconnexion" onAction="#handleLogout"
+                        style="-fx-background-color: #E74C3C; -fx-text-fill: white; -fx-font-size: 16px;
+                       -fx-font-weight: bold; -fx-border-radius: 10px; -fx-padding: 10px 20px;"/>
             </children>
         </VBox>
+
 
         <!-- 🌟 Contenu principal -->
         <VBox layoutX="220.0" layoutY="20.0" prefWidth="700.0" style="-fx-alignment: center; -fx-padding: 10px;">
@@ -85,6 +92,12 @@
                                    -fx-font-weight: bold; -fx-border-radius: 15px; -fx-padding: 15px 50px;
                                    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 10, 0, 2, 2);"
                             GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
+                    <Button onAction="#goToHomePage" text="🧑‍💻 USERS"
+                            style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-size: 16px;
+               -fx-font-weight: bold; -fx-border-radius: 15px; -fx-padding: 15px 50px;
+               -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 10, 0, 2, 2);"
+                            GridPane.rowIndex="4" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
+
                 </GridPane>
             </children>
         </VBox>
