--- a/src/main/resources/homePage.fxml
+++ b/src/main/resources/homePage.fxml
@@ -7,66 +7,78 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.effect.DropShadow?>
+<?import javafx.geometry.Pos?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/20" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomePage"
             stylesheets="@/styles.css"
-            style="-fx-background-color: linear-gradient(to bottom, #8a2be2, #4b0082);">
+            style="-fx-background-color: linear-gradient(to bottom, #3a1c71, #d76d77, #ffaf7b);">
 
-    <!-- Sidebar à gauche -->
-    <VBox prefWidth="200" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0"
-          style="-fx-background-color: linear-gradient(to bottom, #8a2be2, #6a1b9a); -fx-padding: 20px;">
-        <!-- Bouton User avec icône -->
-        <Button fx:id="userButton" text="User" styleClass="sidebar-button">
+    <!-- Sidebar -->
+    <VBox prefWidth="220" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0"
+          style="-fx-background-color: #2c2c54; -fx-padding: 25px; -fx-spacing: 20px; -fx-alignment: center;">
+
+        <!-- Logo -->
+        <ImageView fitWidth="80" fitHeight="80" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@images/logo.jpeg"/>
+            </image>
+        </ImageView>
+
+        <!-- Bouton utilisateur -->
+        <Button fx:id="userButton" text="Profil" styleClass="sidebar-button">
             <graphic>
-                <ImageView fitWidth="20" fitHeight="20">
+                <ImageView fitWidth="22" fitHeight="22">
                     <image>
-                        <Image url="@images/user.png" />
+                        <Image url="@images/user.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
+
+        <!-- Autres Boutons -->
+        <Button fx:id="dashboardButton" text="Dashboard" styleClass="sidebar-button"/>
+        <Button fx:id="settingsButton" text="Paramètres" styleClass="sidebar-button"/>
     </VBox>
 
-    <!-- Barre de recherche centrée -->
-    <HBox spacing="10" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="220" AnchorPane.rightAnchor="20">
-        <TextField fx:id="searchField" promptText="Rechercher un utilisateur..."
-                   styleClass="search-field"/>
+    <!-- Barre supérieure -->
+    <HBox spacing="15" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="240" AnchorPane.rightAnchor="20"
+          style="-fx-alignment: center-left; -fx-padding: 10px;">
+
+        <!-- Champ de recherche -->
+        <TextField fx:id="searchField" promptText="Rechercher un utilisateur..." styleClass="search-field"/>
         <Button styleClass="search-button">
             <graphic>
-                <ImageView fitWidth="24" fitHeight="24">
+                <ImageView fitWidth="20" fitHeight="20">
                     <image>
-                        <Image url="@images/search.png" />
+                        <Image url="@images/search.png"/>
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <!-- Bouton de déconnexion -->
+        <Button fx:id="logoutButton" text="Déconnexion" styleClass="logout-button" onAction="#handleLogout">
+            <graphic>
+                <ImageView fitWidth="18" fitHeight="18">
+                    <image>
+                        <Image url="@images/logout.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
     </HBox>
 
-    <!-- Bouton de déconnexion en haut à droite -->
-    <Button fx:id="logoutButton" text="Déconnexion" styleClass="logout-button"
-            AnchorPane.topAnchor="20" AnchorPane.rightAnchor="20"
-            onAction="#handleLogout">
-        <graphic>
-            <ImageView fitWidth="20" fitHeight="20">
-                <image>
-                    <Image url="@images/logout.png" />
-                </image>
-            </ImageView>
-        </graphic>
-    </Button>
-
-    <!-- Affichage dynamique des cartes d'utilisateurs (centré) -->
-    <ScrollPane fx:id="userListScrollPane" AnchorPane.topAnchor="70" AnchorPane.leftAnchor="220" AnchorPane.rightAnchor="20" AnchorPane.bottomAnchor="90"
-                style="-fx-background-color: transparent;">
-        <VBox fx:id="userCardsContainer" spacing="10" style="-fx-padding: 10px;" />
+    <ScrollPane fx:id="userListScrollPane" AnchorPane.topAnchor="80" AnchorPane.leftAnchor="240" AnchorPane.rightAnchor="20" AnchorPane.bottomAnchor="90"
+                style="-fx-background: transparent;" hbarPolicy="ALWAYS" vbarPolicy="NEVER">
+        <VBox fx:id="userCardsContainer" spacing="15" style="-fx-padding: 10px; -fx-alignment: center-left;"/>
     </ScrollPane>
 
-    <!-- Boutons Ajouter, Modifier et Supprimer -->
-    <HBox spacing="15" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="220">
+
+    <!-- Section des boutons d'actions -->
+    <HBox spacing="20" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="240" style="-fx-alignment: center-left;">
         <Button fx:id="addButton" text="Ajouter" styleClass="action-button" onAction="#handleAddUser"/>
         <Button fx:id="editButton" text="Modifier" styleClass="action-button" onAction="#handleEditUser"/>
-        <Button fx:id="deleteSelectedButton" text="Supprimer la sélection" styleClass="delete-button" onAction="#deleteSelectedUsers"/>
+        <Button fx:id="deleteSelectedButton" text="Supprimer" styleClass="delete-button" onAction="#deleteSelectedUsers"/>
     </HBox>
 
 </AnchorPane>
