--- a/src/main/resources/homePage.fxml
+++ b/src/main/resources/homePage.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.geometry.Pos?>
+<?import javafx.scene.layout.Priority?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/20" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomePage"
             stylesheets="@/styles.css"
             style="-fx-background-color: linear-gradient(to bottom, #3a1c71, #d76d77, #ffaf7b);">
 
     <!-- Sidebar -->
-    <VBox prefWidth="220" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0"
-          style="-fx-background-color: #2c2c54; -fx-padding: 25px; -fx-spacing: 20px; -fx-alignment: center;">
-
+    <VBox prefWidth="300" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0"
+          style="-fx-background-color: #2c2c54; -fx-padding: 30px; -fx-spacing: 25px; -fx-alignment: center;">
         <!-- Logo -->
-        <ImageView fitWidth="80" fitHeight="80" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitWidth="100" fitHeight="100" pickOnBounds="true" preserveRatio="true" styleClass="logo">
             <image>
                 <Image url="@images/logo.jpeg"/>
             </image>
@@ -27,7 +27,7 @@
         <!-- Bouton utilisateur -->
         <Button fx:id="userButton" text="Profil" styleClass="sidebar-button">
             <graphic>
-                <ImageView fitWidth="22" fitHeight="22">
+                <ImageView fitWidth="24" fitHeight="24">
                     <image>
                         <Image url="@images/user.png"/>
                     </image>
@@ -41,14 +41,13 @@
     </VBox>
 
     <!-- Barre supérieure -->
-    <HBox spacing="15" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="240" AnchorPane.rightAnchor="20"
-          style="-fx-alignment: center-left; -fx-padding: 10px;">
-
+    <HBox spacing="20" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="320" AnchorPane.rightAnchor="20"
+          style="-fx-alignment: center-left; -fx-padding: 15px;">
         <!-- Champ de recherche -->
-        <TextField fx:id="searchField" promptText="Rechercher un utilisateur..." styleClass="search-field"/>
+        <TextField fx:id="searchField" promptText="Rechercher un utilisateur..." styleClass="search-field" HBox.hgrow="ALWAYS"/>
         <Button styleClass="search-button">
             <graphic>
-                <ImageView fitWidth="20" fitHeight="20">
+                <ImageView fitWidth="24" fitHeight="24">
                     <image>
                         <Image url="@images/search.png"/>
                     </image>
@@ -59,7 +58,7 @@
         <!-- Bouton de déconnexion -->
         <Button fx:id="logoutButton" text="Déconnexion" styleClass="logout-button" onAction="#handleLogout">
             <graphic>
-                <ImageView fitWidth="18" fitHeight="18">
+                <ImageView fitWidth="20" fitHeight="20">
                     <image>
                         <Image url="@images/logout.png"/>
                     </image>
@@ -68,17 +67,16 @@
         </Button>
     </HBox>
 
-    <ScrollPane fx:id="userListScrollPane" AnchorPane.topAnchor="80" AnchorPane.leftAnchor="240" AnchorPane.rightAnchor="20" AnchorPane.bottomAnchor="90"
+    <!-- Liste des utilisateurs -->
+    <ScrollPane fx:id="userListScrollPane" AnchorPane.topAnchor="80" AnchorPane.leftAnchor="320" AnchorPane.rightAnchor="20" AnchorPane.bottomAnchor="90"
                 style="-fx-background: transparent;" hbarPolicy="ALWAYS" vbarPolicy="NEVER">
-        <VBox fx:id="userCardsContainer" spacing="15" style="-fx-padding: 10px; -fx-alignment: center-left;"/>
+        <VBox fx:id="userCardsContainer" spacing="20" style="-fx-padding: 20px; -fx-alignment: center-left;" VBox.vgrow="ALWAYS"/>
     </ScrollPane>
 
-
     <!-- Section des boutons d'actions -->
-    <HBox spacing="20" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="240" style="-fx-alignment: center-left;">
+    <HBox spacing="30" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="320" AnchorPane.rightAnchor="20" style="-fx-alignment: center-left;">
         <Button fx:id="addButton" text="Ajouter" styleClass="action-button" onAction="#handleAddUser"/>
         <Button fx:id="editButton" text="Modifier" styleClass="action-button" onAction="#handleEditUser"/>
         <Button fx:id="deleteSelectedButton" text="Supprimer" styleClass="delete-button" onAction="#deleteSelectedUsers"/>
     </HBox>
-
 </AnchorPane>
